Fix image alignment issue
Thanks to Alo's incredible help, changed display for .container to inline-clock display, resolved issue.

--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@ p {
   background-position: 50% 50%;
   background-repeat: no-repeat;
   background-size: cover;
-  display: block;
+  display: inline-block;
   position: relative;
   margin: 16px;
 }
